# DecAlign

./: .gitignore  README.md  config.py  data_loader.py  data_prep.sh  eval.py  index.html  main.py  pyproject.toml  requirements.txt  run.py  setup.sh
config/: dec_config.json  dec_mosei_config.json  dec_mosi_config.json  dec_sims_config.json  iemocap_decalign_config.json
models/: __init__.py  model.py
scripts/: prepare_iemocap.py  run_decalign.sh  run_iemocap.sh  run_mosei.sh  run_mosi.sh
trains/: ATIO.py  __init__.py
trains/subNets/: BertTextEncoder.py  __init__.py  transformer.py
utils/: __init__.py  functions.py  metrices.py
